--- a/LoginApp2/app/src/main/res/layout/content_login.xml
+++ b/LoginApp2/app/src/main/res/layout/content_login.xml
@@ -25,6 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Insert Password"
+        android:password="true"
         android:singleLine="true" />
 
     <Button
