--- a/LoginApp2/app/src/main/res/layout/content_signup.xml
+++ b/LoginApp2/app/src/main/res/layout/content_signup.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,8 +8,36 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="id.co.okhome.loginapp2.SignupActivity"
     tools:showIn="@layout/activity_signup">
 
-</RelativeLayout>
+    <EditText
+        android:id="@+id/signup_id"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Insert ID"
+        android:singleLine="true" />
+
+    <EditText
+        android:id="@+id/signup_pw"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Insert Password"
+        android:singleLine="true" />
+
+    <EditText
+        android:id="@+id/signup_pwRe"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Insert Password Again"
+        android:singleLine="true" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/btn_submit"
+        android:text="Submit" />
+
+</LinearLayout>
