--- a/Okhome/app/src/main/res/layout/content_main.xml
+++ b/Okhome/app/src/main/res/layout/content_main.xml
@@ -13,6 +13,86 @@
     tools:context="id.co.okhome.okhome.MainActivity"
     tools:showIn="@layout/activity_main">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/welcome"
+        android:textAlignment="center"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/upcoming_order"
+        android:text="@string/upcoming_order"
+        android:textAlignment="center"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/upcoming_order2"
+        android:textAlignment="center"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/current_balance"
+        android:text="@string/current_balance"
+        android:textAlignment="center"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/current_balance2"
+        android:textAlignment="center"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btn_newOrder"
+            android:text="@string/newOrder"
+            android:textAlignment="center"
+            android:gravity="fill_horizontal"
+            android:layout_gravity="right"
+            android:layout_weight="1"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btn_changeOrder"
+            android:text="@string/changeOrder"
+            android:textAlignment="center"
+            android:gravity="fill_horizontal"
+            android:layout_gravity="left"
+            android:layout_weight="1"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btn_orderHistory"
+            android:text="@string/orderHistory"
+            android:layout_weight="1"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:id="@+id/btn_topUp"
+            android:text="@string/topUp" />
+
+    </LinearLayout>
+
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -23,8 +103,9 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/btn_toOrder"
-        android:text="@string/toOrder"
+        android:id="@+id/btn_customerService"
+        android:text="@string/customerService"
         android:layout_gravity="end" />
+
 
 </LinearLayout>
