--- a/Okhome/app/src/main/res/layout/content_order.xml
+++ b/Okhome/app/src/main/res/layout/content_order.xml
@@ -1,9 +1,17 @@
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/fragment"
-    android:name="id.co.okhome.okhome.OrderActivityFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:layout="@layout/fragment_order" />
+    android:orientation="vertical"
+    tools:context="id.co.okhome.okhome.OrderActivity"
+    tools:showIn="@layout/activity_order">
+
+
+</LinearLayout>
