--- a/Okhome/app/src/main/res/layout/fragment_basic_info_fragment1.xml
+++ b/Okhome/app/src/main/res/layout/fragment_basic_info_fragment1.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/fragment_basic_info"
+    android:id="@+id/fragment_basic_info1"
     tools:context="id.co.okhome.okhome.BasicInfoFragment1">
 
     <!-- TODO: Update blank fragment layout -->
