--- a/Okhome/app/src/main/res/layout/fragment_select_day.xml
+++ b/Okhome/app/src/main/res/layout/fragment_select_day.xml
@@ -15,7 +15,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/btn_monday"
-            android:text="@string/monday"
+            android:textOn="@string/monday"
+            android:textOff="@string/monday"
             android:textAlignment="center"
             android:outlineProvider="bounds"
             android:padding="16dp"
@@ -25,7 +26,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/btn_tuesday"
-            android:text="@string/tuesday"
+            android:textOn="@string/tuesday"
+            android:textOff="@string/tuesday"
             android:textAlignment="center"
             android:outlineProvider="bounds"
             android:padding="16dp"
@@ -35,7 +37,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/btn_wednesday"
-            android:text="@string/wednesday"
+            android:textOn="@string/wednesday"
+            android:textOff="@string/wednesday"
             android:textAlignment="center"
             android:outlineProvider="bounds"
             android:padding="16dp"
@@ -45,7 +48,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/btn_thursday"
-            android:text="@string/thursday"
+            android:textOn="@string/thursday"
+            android:textOff="@string/thursday"
             android:textAlignment="center"
             android:outlineProvider="bounds"
             android:padding="16dp"
@@ -55,7 +59,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/btn_friday"
-            android:text="@string/friday"
+            android:textOn="@string/friday"
+            android:textOff="@string/friday"
             android:textAlignment="center"
             android:outlineProvider="bounds"
             android:padding="16dp"
@@ -65,7 +70,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/btn_saturday"
-            android:text="@string/saturday"
+            android:textOn="@string/saturday"
+            android:textOff="@string/saturday"
             android:textAlignment="center"
             android:outlineProvider="bounds"
             android:padding="16dp"
@@ -75,7 +81,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/btn_sunday"
-            android:text="@string/sunday"
+            android:textOn="@string/sunday"
+            android:textOff="@string/sunday"
             android:textAlignment="center"
             android:outlineProvider="bounds"
             android:padding="16dp"
