--- a/Okhome/app/src/main/res/layout/fragment_time_selection.xml
+++ b/Okhome/app/src/main/res/layout/fragment_time_selection.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/fragment_time_selection"
-    tools:context="id.co.okhome.okhome.TimeSelection">
+    tools:context=".TimeSelectionFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <LinearLayout
@@ -26,33 +26,219 @@
             android:layout_height="match_parent"
             android:id="@+id/cleaningDay1" />
 
-        <Button
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="pick time day #1"
-            android:id="@+id/time_picker1"/>
+            android:orientation="vertical">
+
+            <RadioGroup
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:id="@+id/rdb_select_time1_day1"
+                android:layout_weight="1">
+
+                <RadioButton
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/eight_thirty"
+                    android:id="@+id/btn_eight_thirty_day1"
+                    android:layout_weight="1"
+                    android:background="@drawable/btn_color_selector"/>
+                <RadioButton
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/fourteen_zero"
+                    android:id="@+id/btn_fourteen_zero_day1"
+                    android:layout_weight="1"
+                    android:background="@drawable/btn_color_selector"/>
+                <RadioButton
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/nineteen_thirty"
+                    android:id="@+id/btn_nineteen_thirty_day1"
+                    android:layout_weight="1"
+                    android:background="@drawable/btn_color_selector"/>
+
+            </RadioGroup>
+
+            <RadioGroup
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:id="@+id/rdb_select_time2_day1"
+                android:layout_weight="1">
+
+                <RadioButton
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/nine_zero"
+                    android:id="@+id/btn_nine_zero_day1"
+                    android:layout_weight="1"
+                    android:background="@drawable/btn_color_selector"/>
+                <RadioButton
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/fourteen_thirty"
+                    android:id="@+id/btn_fourteen_thirty_day1"
+                    android:layout_weight="1"
+                    android:background="@drawable/btn_color_selector"/>
+                <RadioButton
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/twenty_zero"
+                    android:id="@+id/btn_twenty_zero_day1"
+                    android:layout_weight="1"
+                    android:background="@drawable/btn_color_selector"/>
+
+            </RadioGroup>
+        </LinearLayout>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/cleaningDay2" />
 
-        <Button
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="pick time day #2"
-            android:id="@+id/time_picker2"/>
+            android:orientation="vertical">
+
+            <RadioGroup
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:id="@+id/rdb_select_time1_day2"
+                android:layout_weight="1">
+
+                <RadioButton
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/eight_thirty"
+                    android:id="@+id/btn_eight_thirty_day2"
+                    android:layout_weight="1"
+                    android:background="@drawable/btn_color_selector"/>
+                <RadioButton
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/fourteen_zero"
+                    android:id="@+id/btn_fourteen_zero_day2"
+                    android:layout_weight="1"
+                    android:background="@drawable/btn_color_selector"/>
+                <RadioButton
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/nineteen_thirty"
+                    android:id="@+id/btn_nineteen_thirty_day2"
+                    android:layout_weight="1"
+                    android:background="@drawable/btn_color_selector"/>
+
+            </RadioGroup>
+
+            <RadioGroup
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:id="@+id/rdb_select_time2_day2"
+                android:layout_weight="1">
+
+                <RadioButton
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/nine_zero"
+                    android:id="@+id/btn_nine_zero_day2"
+                    android:layout_weight="1"
+                    android:background="@drawable/btn_color_selector"/>
+                <RadioButton
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/fourteen_thirty"
+                    android:id="@+id/btn_fourteen_thirty_day2"
+                    android:layout_weight="1"
+                    android:background="@drawable/btn_color_selector"/>
+                <RadioButton
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/twenty_zero"
+                    android:id="@+id/btn_twenty_zero_day2"
+                    android:layout_weight="1"
+                    android:background="@drawable/btn_color_selector"/>
+
+            </RadioGroup>
+        </LinearLayout>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/cleaningDay3" />
 
-        <Button
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="pick time day #3"
-            android:id="@+id/time_picker3"/>
+            android:orientation="vertical">
+
+            <RadioGroup
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:id="@+id/rdb_select_time1_day3"
+                android:layout_weight="1">
+
+                <RadioButton
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/eight_thirty"
+                    android:id="@+id/btn_eight_thirty_day3"
+                    android:layout_weight="1"
+                    android:background="@drawable/btn_color_selector"/>
+                <RadioButton
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/fourteen_zero"
+                    android:id="@+id/btn_fourteen_zero_day3"
+                    android:layout_weight="1"
+                    android:background="@drawable/btn_color_selector"/>
+                <RadioButton
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/nineteen_thirty"
+                    android:id="@+id/btn_nineteen_thirty_day3"
+                    android:layout_weight="1"
+                    android:background="@drawable/btn_color_selector"/>
+
+            </RadioGroup>
+
+            <RadioGroup
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:id="@+id/rdb_select_time2_day3"
+                android:layout_weight="1">
+
+                <RadioButton
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/nine_zero"
+                    android:id="@+id/btn_nine_zero_day3"
+                    android:layout_weight="1"
+                    android:background="@drawable/btn_color_selector"/>
+                <RadioButton
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/fourteen_thirty"
+                    android:id="@+id/btn_fourteen_thirty_day3"
+                    android:layout_weight="1"
+                    android:background="@drawable/btn_color_selector"/>
+                <RadioButton
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/twenty_zero"
+                    android:id="@+id/btn_twenty_zero_day3"
+                    android:layout_weight="1"
+                    android:background="@drawable/btn_color_selector"/>
+
+            </RadioGroup>
+        </LinearLayout>
 
         <TextView
             android:layout_width="match_parent"
