UI changed to date first

--- a/Okhome/app/src/main/res/layout/fragment_select_date.xml
+++ b/Okhome/app/src/main/res/layout/fragment_select_date.xml
@@ -5,9 +5,31 @@
     tools:context="id.co.okhome.okhome.SelectDateFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/choose_first_date" />
+
+        <DatePicker
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:datePickerMode="spinner"
+            android:id="@+id/first_date_picker">
+        </DatePicker>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/btn_end_of_select_date_fragment"
+            android:text="NEXT"/>
+
+
+    </LinearLayout>
 
 </FrameLayout>
