--- a/Okhome/app/src/main/res/layout/content_login.xml
+++ b/Okhome/app/src/main/res/layout/content_login.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/content_login"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -40,5 +41,11 @@
         android:layout_height="wrap_content"
         android:id="@+id/btn_signup"
         android:text="@string/btn_signup" />
+
+    <CheckBox
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/chk_auto_login"
+        android:text="@string/auto_login"/>
 
 </LinearLayout>
