--- a/Okhome/app/src/main/res/layout/fragment_sign_up_recommend.xml
+++ b/Okhome/app/src/main/res/layout/fragment_sign_up_recommend.xml
@@ -42,6 +42,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/proceed_guest"
+                android:id="@+id/btn_continue_guest"
                 android:layout_gravity="bottom"
                 android:textAlignment="center"/>
 
