--- a/Okhome/app/src/main/res/layout/fragment_top_up_info.xml
+++ b/Okhome/app/src/main/res/layout/fragment_top_up_info.xml
@@ -8,13 +8,13 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/topup_info" />
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="@string/topup_info" />
 
         <TextView
             android:layout_width="match_parent"
