--- a/Okhome/app/src/main/res/layout/fragment_top_up_confirm.xml
+++ b/Okhome/app/src/main/res/layout/fragment_top_up_confirm.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/fragment_top_up_confirm"
     tools:context="id.co.okhome.okhome.TopUpConfirmFragment">
 
     <!-- TODO: Update blank fragment layout -->
