--- a/Okhome/app/src/main/res/layout/fragment_basic_info_fragment2.xml
+++ b/Okhome/app/src/main/res/layout/fragment_basic_info_fragment2.xml
@@ -1,4 +1,4 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -6,31 +6,46 @@
     tools:context="id.co.okhome.okhome.BasicInfoFragment2">
 
     <!-- TODO: Update blank fragment layout -->
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/tell_us_more"
-            android:layout_weight="1"
-            android:textAlignment="center"/>
+        android:layout_height="40dp"
+        android:layout_alignParentTop="true"
+        android:id="@+id/fragment_basic_info2_top">
+    </FrameLayout>
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/detailed_info"
-            android:hint="@string/detailed_info"
-            android:layout_weight="5"/>
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/btn_end_of_basic_info2"
-            android:text="NEXT"
-            android:textAlignment="center"
-            android:layout_gravity="bottom"
-            />
-    </LinearLayout>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/fragment_basic_info2_top"
+        android:layout_above="@+id/btn_end_of_basic_info2">
 
-</FrameLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/tell_us_more"
+                android:layout_weight="1"
+                android:textAlignment="center"/>
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/detailed_info"
+                android:hint="@string/detailed_info"/>
+
+        </LinearLayout>
+    </ScrollView>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:id="@+id/btn_end_of_basic_info2"
+        android:text="NEXT"
+        android:textAlignment="center"
+        android:layout_alignParentBottom="true"
+        />
+
+
+</RelativeLayout>
