--- a/Okhome/app/src/main/res/layout/fragment_basic_info_fragment2.xml
+++ b/Okhome/app/src/main/res/layout/fragment_basic_info_fragment2.xml
@@ -17,7 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/fragment_basic_info2_top"
-        android:layout_above="@+id/btn_end_of_basic_info2">
+        android:layout_above="@+id/chk_cleaning_tools">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -38,6 +38,13 @@
 
         </LinearLayout>
     </ScrollView>
+
+    <CheckBox
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/chk_cleaning_tools"
+        android:text="@string/use_cleaning_tools"
+        android:layout_above="@+id/btn_end_of_basic_info2"/>
     <Button
         android:layout_width="match_parent"
         android:layout_height="40dp"
