--- a/Okhome/app/src/main/res/layout/fragment_basic_info_fragment2.xml
+++ b/Okhome/app/src/main/res/layout/fragment_basic_info_fragment2.xml
@@ -6,12 +6,54 @@
     tools:context="id.co.okhome.okhome.BasicInfoFragment2">
 
     <!-- TODO: Update blank fragment layout -->
-    <FrameLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="8dp"
+        android:orientation="horizontal"
         android:layout_alignParentTop="true"
         android:id="@+id/fragment_basic_info2_top">
-    </FrameLayout>
+
+        <View
+            android:layout_width="5dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="#006782"/>
+        <View
+            android:layout_width="5dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="#006782"/>
+        <View
+            android:layout_width="5dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="#006782"/>
+        <View
+            android:layout_width="5dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="#006782"/>
+        <View
+            android:layout_width="5dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="#006782"/>
+        <View
+            android:layout_width="5dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="#006782"/>
+        <View
+            android:layout_width="5dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="#f8f8f8"/>
+        <View
+            android:layout_width="5dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="#f8f8f8"/>
+    </LinearLayout>
 
     <ScrollView
         android:layout_width="match_parent"
