--- a/Okhome/app/src/main/res/layout/fragment_top_up_info.xml
+++ b/Okhome/app/src/main/res/layout/fragment_top_up_info.xml
@@ -6,11 +6,29 @@
 
     <!-- TODO: Update blank fragment layout -->
 
-    <FrameLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="8dp"
+        android:orientation="horizontal"
         android:id="@+id/fragment_top_up_info_top"
-        android:layout_alignParentTop="true"/>
+        android:layout_alignParentTop="true">
+
+        <View
+            android:layout_width="5dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="#006782"/>
+        <View
+            android:layout_width="5dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="#006782"/>
+        <View
+            android:layout_width="5dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="#f8f8f8"/>
+    </LinearLayout>
 
     <ScrollView
         android:layout_width="match_parent"
