Edited OrderHistory RecyclerView in SM's way

--- a/Okhome/app/src/main/res/layout/order_history_view.xml
+++ b/Okhome/app/src/main/res/layout/order_history_view.xml
@@ -28,5 +28,11 @@
                 android:layout_height="wrap_content"
                 android:padding="8dp" />
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#666666"/>
+
+
         </LinearLayout>
 </RelativeLayout>
