Edited folder organization

--- a/Okhome/app/src/main/res/layout/content_order_change.xml
+++ b/Okhome/app/src/main/res/layout/content_order_change.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="id.co.okhome.okhome.OrderChangeActivity"
+    tools:context=".view.activity.OrderChangeActivity"
     tools:showIn="@layout/activity_order_change">
 
     <android.support.v7.widget.RecyclerView
