--- a/Okhome/app/src/main/res/layout/fragment_select_day.xml
+++ b/Okhome/app/src/main/res/layout/fragment_select_day.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/fragment_select_day"
-    tools:context=".SelectDayFragment">
+    tools:context=".view.fragment.order_fragment.SelectDayFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <LinearLayout
