--- a/Okhome/app/src/main/res/layout/activity_order.xml
+++ b/Okhome/app/src/main/res/layout/activity_order.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="id.co.okhome.okhome.OrderActivity">
+    tools:context=".view.activity.OrderActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
