--- a/Okhome/app/src/main/res/layout/content_login.xml
+++ b/Okhome/app/src/main/res/layout/content_login.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="id.co.okhome.okhome.LoginActivity"
+    tools:context=".view.activity.LoginActivity"
     tools:showIn="@layout/activity_login"
     android:orientation="vertical">
 
