--- a/Okhome/app/src/main/res/layout/content_order.xml
+++ b/Okhome/app/src/main/res/layout/content_order.xml
@@ -11,7 +11,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     android:orientation="horizontal"
-    tools:context="id.co.okhome.okhome.OrderActivity"
+    tools:context=".view.activity.OrderActivity"
     tools:showIn="@layout/activity_order">
 
 </FrameLayout>
