--- a/Okhome/app/src/main/res/layout/content_order_history.xml
+++ b/Okhome/app/src/main/res/layout/content_order_history.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="id.co.okhome.okhome.OrderHistoryActivity"
+    tools:context=".view.activity.OrderHistoryActivity"
     tools:showIn="@layout/activity_order_history">
 
     <android.support.v7.widget.RecyclerView
