--- a/Okhome/app/src/main/res/layout/content_signup.xml
+++ b/Okhome/app/src/main/res/layout/content_signup.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="id.co.okhome.okhome.SignupActivity"
+    tools:context=".view.activity.SignupActivity"
     tools:showIn="@layout/activity_signup"
     android:orientation="vertical">
 
