--- a/Okhome/app/src/main/res/layout/fragment_package_selection.xml
+++ b/Okhome/app/src/main/res/layout/fragment_package_selection.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/fragment_package_selection"
-    tools:context=".PackageSelectionFragment">
+    tools:context=".view.fragment.order_fragment.PackageSelectionFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
