--- a/Okhome/app/src/main/res/layout/fragment_sign_up_recommend.xml
+++ b/Okhome/app/src/main/res/layout/fragment_sign_up_recommend.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="id.co.okhome.okhome.SignUpRecommendFragment">
+    tools:context=".view.fragment.SignUpRecommendFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
