--- a/Okhome/app/src/main/res/layout/fragment_time_selection_one_day.xml
+++ b/Okhome/app/src/main/res/layout/fragment_time_selection_one_day.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/fragment_time_selection_one_day"
-    tools:context=".TimeSelectionOneDayFragment">
+    tools:context=".view.fragment.order_fragment.TimeSelectionOneDayFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <LinearLayout
