--- a/Okhome/app/src/main/res/layout/fragment_time_selection_three_days.xml
+++ b/Okhome/app/src/main/res/layout/fragment_time_selection_three_days.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/fragment_time_selection"
-    tools:context=".TimeSelectionThreeDaysFragment">
+    tools:context=".view.fragment.order_fragment.TimeSelectionThreeDaysFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <LinearLayout
