--- a/Okhome/app/src/main/res/layout/fragment_top_up_confirm.xml
+++ b/Okhome/app/src/main/res/layout/fragment_top_up_confirm.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/fragment_top_up_confirm"
-    tools:context="id.co.okhome.okhome.TopUpConfirmFragment">
+    tools:context=".view.fragment.topup_fragment.TopUpConfirmFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <LinearLayout
