--- a/Okhome/app/src/main/res/layout/fragment_top_up_package.xml
+++ b/Okhome/app/src/main/res/layout/fragment_top_up_package.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="id.co.okhome.okhome.TopUpPackageFragment">
+    tools:context=".view.fragment.topup_fragment.TopUpPackageFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
