--- a/Okhome/app/src/main/res/menu/menu_order.xml
+++ b/Okhome/app/src/main/res/menu/menu_order.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="id.co.okhome.okhome.OrderActivity">
+    tools:context=".view.activity.OrderActivity">
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
